syntax = "proto3";
package helloworld;

service Greeter {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message HelloReply {
    // Reply contains the greeting message
    string message = 1;
}

service Hi {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHi (HiRequest) returns (HiReply);
}

message HiRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message HiReply {
    // Reply contains the greeting message
    string message = 1;
}